--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   {{title}}
 </h1>
 <div *ngFor="let voto of votos">
-  <input-component voto="{{voto.title}}"></input-component>
+  <input-component voto="{{voto.title}}" (addVoto)="addVoto($event)"></input-component>
 </div>
+<h3>{{votacion}}</h3>
