--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div *ngFor="let voto of votos">
   <input-component voto="{{voto.title}}" (addVoto)="addVoto($event)"></input-component>
 </div>
-<h3>{{votacion}}</h3>
+<h3 gigant hightlight>{{votacion}}</h3>
 
 <h4>Conversor</h4>
 
