--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,29 @@
     <span hightlight>[ {{i.estado}} ]</span>
   </li>
 </ul>
+
+<h2>Form Basico</h2>
+<form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
+  <div>
+    <label for="nameInput">Nombre</label>
+    <input type="text"
+           id="nameInput"
+           placeholder="Nombre"
+           name="nombre" ngModel>
+  </div>
+  <div>
+    <label for="apellidoInput">Apellido</label>
+    <input type="text"
+           id="apellidoInput"
+           placeholder="Apellido"
+           name="apellido" ngModel>
+  </div>
+  <div>
+    <label for="twitterInput">Twitter</label>
+    <input type="text"
+           id="twitterInput"
+           placeholder="Twitter"
+           name="twitter" ngModel>
+  </div>
+  <button type="submit">Submit</button>
+</form>
